--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,59 @@ a {
   text-decoration: none;
 }
 
+body {
+  background-color: #333;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+main header {
+  width: 20%;
+  height: 100%;
+  padding: 10vh 5vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-between;
+}
+main header h1 {
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+main header h1 i {
+  font-size: 5vw;
+  margin-bottom: 15px;
+}
+main header h1 span {
+  width: 100%;
+  font-weight: normal;
+  font-size: 0.8vw;
+  line-height: 1;
+  font-family: "arial";
+  text-align: center;
+}
+main header p {
+  font: normal 11px/1.2 "arial";
+  color: #888;
+}
+main section {
+  width: 80%;
+  height: 100%;
+  padding-top: 10vh;
+  display: flex;
+  border: 1px solid red;
+}
+main nav {
+  position: absolute;
+  top: 6vh;
+  right: 5vw;
+  border: 10px solid aqua;
+}
+
 /*# sourceMappingURL=styles.css.map */
