--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,61 @@
 @charset "UTF-8";
 @import "reset";
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Architects+Daughter&family=Fredericka+the+Great&display=swap");
+
+main {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+
+	header {
+		width: 20%;
+		height: 100%;
+		padding: 10vh 5vw;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-content: space-between;
+
+		h1 {
+			color: #fff;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-content: center;
+
+			i {
+				font-size: 5vw;
+				margin-bottom: 15px;
+			}
+
+			span {
+				width: 100%;
+				font-weight: normal;
+				font-size: 0.8vw;
+				line-height: 1;
+				font-family: "arial";
+				text-align: center;
+			}
+		}
+
+		p {
+			font: normal 11px/1.2 "arial";
+			color: #888;
+		}
+	}
+
+	section {
+		width: 80%;
+		height: 100%;
+		padding-top: 10vh;
+		display: flex;
+		border: 1px solid red;
+	}
+
+	nav {
+		position: absolute;
+		top: 6vh;
+		right: 5vw;
+		border: 10px solid aqua;
+	}
+}
