--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -49,13 +49,84 @@ main {
 		height: 100%;
 		padding-top: 10vh;
 		display: flex;
-		border: 1px solid red;
+
+		article {
+			flex: 1;
+			transition: 0.5s;
+			position: relative;
+
+			&::before {
+				width: 80%;
+				height: 95%;
+				content: "";
+				display: block;
+				position: absolute;
+				top: 0px;
+				left: -100px;
+				opacity: 0;
+				transition: 1s;
+				background-color: #444;
+				box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+			}
+
+			.inner {
+				width: 100%;
+				height: 100%;
+				position: relative;
+				display: flex;
+				flex-wrap: wrap;
+				align-content: space-between;
+				padding: 50px 30px 100px;
+
+				figure {
+					width: 100%;
+					height: 15vh;
+					overflow: hidden;
+					top: 0;
+					transition: 0.3s;
+					box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+					filter: saturate(0.2);
+					video {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+			}
+
+			&:hover {
+				flex: 1.3;
+
+				&::before {
+					left: 0;
+					opacity: 1;
+				}
+
+				.inner {
+					figure {
+						height: 20vh;
+						top: 25px;
+						filter: saturate(1.2);
+					}
+				}
+			}
+		}
 	}
 
 	nav {
 		position: absolute;
-		top: 6vh;
+		top: 4vh;
 		right: 5vw;
-		border: 10px solid aqua;
+
+		ul {
+			display: flex;
+			li {
+				margin: 15px;
+				a {
+					font-size: 18px;
+					color: #bbb;
+				}
+			}
+		}
 	}
 }
