--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,6 +15,8 @@ main {
 		flex-wrap: wrap;
 		justify-content: center;
 		align-content: space-between;
+		position: relative;
+		z-index: 3;
 
 		h1 {
 			color: #fff;
@@ -49,6 +51,9 @@ main {
 		height: 100%;
 		padding-top: 10vh;
 		display: flex;
+		position: relative;
+		cursor: pointer;
+		z-index: 1;
 
 		article {
 			flex: 1;
@@ -165,6 +170,58 @@ main {
 					color: #bbb;
 				}
 			}
+		}
+	}
+
+	aside {
+		width: 100%;
+		height: 100%;
+		background: #333;
+		position: absolute;
+		top: 0;
+		left: -100%;
+		z-index: 2;
+		padding: 5vw;
+		padding-left: 20%;
+		display: flex;
+		justify-content: space-between;
+		opacity: 0;
+		transition: 0.5s;
+
+		&.on {
+			opacity: 1;
+			left: 0%;
+		}
+
+		.text-box {
+			width: 25%;
+			h2 {
+				font: 300 150px/1 "Alegreya Sans SC";
+				color: #ddd;
+				margin-bottom: 30px;
+			}
+			p {
+				font: 18px/1.2 "arial";
+				color: #777;
+			}
+		}
+
+		.video-box {
+			width: 72%;
+			padding-top: 175px;
+
+			video {
+				width: 100%;
+			}
+		}
+
+		.btn-close {
+			position: absolute;
+			top: 150px;
+			right: 5vw;
+			font: 16px/1 "arial";
+			color: orange;
+			cursor: pointer;
 		}
 	}
 }
